RESOLVED FIXED75656
Assertion failure under SharedBuffer::append() when NETWORK_CFDATA_ARRAY_CALLBACK is enabled
https://bugs.webkit.org/show_bug.cgi?id=75656
Summary Assertion failure under SharedBuffer::append() when NETWORK_CFDATA_ARRAY_CALL...
Pratik Solanki
Reported 2012-01-05 15:19:01 PST
I get the following assertion when I enable NETWORK_CFDATA_ARRAY_CALLBACK on Mac OSX. ASSERTION FAILED: i < size() /Volumes/Data/Builds/Xcode4-builds/Debug/JavaScriptCore.framework/PrivateHeaders/Vector.h(520) : char *&WTF::Vector<char *, 0>::at(size_t) 1 0x1033deb9a WTF::Vector<char*, 0ul>::at(unsigned long) 2 0x1033de0cb WTF::Vector<char*, 0ul>::last() 3 0x1033dd18b WebCore::SharedBuffer::append(char const*, unsigned int) 4 0x103327eeb WebCore::ResourceLoader::addData(char const*, int, bool) 5 0x103328499 WebCore::ResourceLoader::didReceiveData(char const*, int, long long, bool) 6 0x10344c811 WebCore::SubresourceLoader::didReceiveData(char const*, int, long long, bool) 7 0x10344d2b1 WebCore::SubresourceLoader::didReceiveDataArray(__CFArray const*) 8 0x103329d38 WebCore::ResourceLoader::didReceiveDataArray(WebCore::ResourceHandle*, __CFArray const*) 9 0x1033238b2 WebCore::ResourceHandle::handleDataArray(__CFArray const*) 10 0x1033212c0 _ZN7WebCoreL19didReceiveDataArrayEP16_CFURLConnectionPK9__CFArrayPKv 11 0x7fff8fa9f563 URLConnectionClient::_clientDidReceiveData(__CFArray const*, URLConnectionClient::ClientConnectionEventQueue*) 12 0x7fff8fb50ceb URLConnectionClient::ClientConnectionEventQueue::processAllEventsAndConsumePayload(XConnectionEventInfo<XClientEvent, XClientEventParams>*, long) 13 0x7fff8fb50efa URLConnectionClient::ClientConnectionEventQueue::processAllEventsAndConsumePayload(XConnectionEventInfo<XClientEvent, XClientEventParams>*, long) 14 0x7fff8fa7bdfd URLConnectionClient::processEvents() 15 0x7fff8fa7bca2 MultiplexerSource::perform() 16 0x7fff8e818b51 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 17 0x7fff8e81847c __CFRunLoopDoSources0 18 0x7fff8e83f1a9 __CFRunLoopRun 19 0x7fff8e83eae6 CFRunLoopRunSpecific 20 0x7fff923973d3 RunCurrentEventLoopInMode 21 0x7fff9239e63d ReceiveNextEventCommon 22 0x7fff9239e4ca BlockUntilNextEventMatchingListInMode 23 0x7fff949573f1 _DPSNextEvent 24 0x7fff94956cf5 -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] 25 0x7fff8dfa80d3 -[BrowserApplication nextEventMatchingMask:untilDate:inMode:dequeue:] 26 0x7fff9495362d -[NSApplication run] 27 0x7fff94bd280c NSApplicationMain 28 0x7fff8e15bffb SafariMain 29 0x100000f24
Attachments
Patch (4.02 KB, patch)
2012-01-05 17:04 PST, Pratik Solanki
no flags
Pratik Solanki
Comment 1 2012-01-05 17:04:29 PST
WebKit Review Bot
Comment 2 2012-01-08 13:31:18 PST
Comment on attachment 121370 [details] Patch Clearing flags on attachment: 121370 Committed r104407: <http://trac.webkit.org/changeset/104407>
WebKit Review Bot
Comment 3 2012-01-08 13:31:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.