Assertion failure under SharedBuffer::append() when NETWORK_CFDATA_ARRAY_CALLBACK is enabled https://bugs.webkit.org/show_bug.cgi?id=75656

Reviewed by Darin Adler.

Update the implementation of SubresourceLoader::didReceiveDataArray() to conform to the
refactoring done as part of bug 71149 in r100311.

* loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::didReceiveData):
(WebCore::SubresourceLoader::errorLoadingResource):
* loader/SubresourceLoader.h:
* loader/cf/SubresourceLoaderCF.cpp:
(WebCore::SubresourceLoader::didReceiveDataArray):


Canonical link: https://commits.webkit.org/92609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104407 268f45cc-cd09-0410-ab3c-d52691b4dbfc